# Background-Extraction-C--OpenCV

./: README.md
MOG/: .cproject  .project  CMakeLists.txt  compile.sh  main.cpp
MOG/.csettings/: 0.1477293224_cdtBuildSystem  0.1477293224_org.eclipse.cdt.core.settings  0.1670858520_cdtBuildSystem  0.1670858520_org.eclipse.cdt.core.settings
MOG/include/: Background.h  GList.h  Gaussian.h  conf.h
MOG/src/: Background.cpp  GList.cpp  Gaussian.cpp
